--- a/pages/registro.html
+++ b/pages/registro.html
@@ -25,7 +25,12 @@
       href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@1,300&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/png" sizes="34x34" href="../img/favicon1.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="34x34"
+      href="../img/favicon1.png"
+    />
     <link rel="stylesheet" href="../css/style.css" />
     <title>
       ElectroHouse: Electrodomésticos, Tecnología y Artículos de Hogar
@@ -60,7 +65,10 @@
           <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <form class="me-3 d-flex" role="search">
-                <a href="../pages/error404.html" class="btn btn-outline-primary me-2">
+                <a
+                  href="../pages/error404.html"
+                  class="btn btn-outline-primary me-2"
+                >
                   <i class="bi bi-search"></i>
                 </a>
                 <input
@@ -71,18 +79,16 @@
                 />
               </form>
               <li class="nav-item">
-                <a
-                  class="nav-link me-5"
-                  href="../index.html"
-                  >Inicio</a
-                >
+                <a class="nav-link mx-3" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link me-5" href="../pages/error404.html">Novedades</a>
+                <a class="nav-link mx-3" href="../pages/error404.html"
+                  >Novedades</a
+                >
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link me-4 pe-5 dropdown-toggle"
+                  class="nav-link mx-3 pe-5 dropdown-toggle"
                   href="#"
                   id="menudropdown"
                   role="button"
@@ -92,9 +98,14 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="../pages/login.html"
-                      ><i class="bi bi-caret-right"></i> Login</a
+                    <a
+                      class="dropdown-item"
+                      href="#"
+                      data-bs-toggle="modal"
+                      data-bs-target="#miModal"
                     >
+                      <i class="bi bi-caret-right"></i> Login
+                    </a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="../pages/registro.html"
@@ -114,20 +125,20 @@
       </nav>
     </header>
     <main>
-        <section>
-            <article class="container">
-            <div class="row justify-content-center mt-5">
-                <div class="col-12 col-md-6">
-                    <!-- TÍTULO A LA IZQUIERDA -->
-        <h2 class="mb-4 text-start logo">Crea tu cuenta</h2>
-              <form>
+      <section>
+        <article class="container my-4">
+          <div class="row justify-content-center mt-5">
+            <div class="col-12 col-md-6">
+              <!-- TÍTULO A LA IZQUIERDA -->
+              <h2 class="mb-4 text-start logo">Crea tu cuenta</h2>
+              <form class="card p-3 shadow">
                 <div class="mb-3">
                   <label for="Nombre" class="form-label">Nombre *</label>
                   <input
                     type="text"
                     class="form-control bg-light"
                     id="Nombre"
-                    placeholder="Juan"
+                    placeholder="Nombre"
                     pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ\s]{2,50}$"
                     title="Debe contener solo letras y espacios (mínimo 2 caracteres)"
                     required
@@ -140,7 +151,7 @@
                     type="text"
                     class="form-control"
                     id="Apellido"
-                    placeholder="Perez"
+                    placeholder="Apellido"
                     pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ\s]{2,50}$"
                     title="Debe contener solo letras y espacios (mínimo 2 caracteres)"
                     required
@@ -250,133 +261,243 @@
                   Los campos con (*) son obligatorios
                 </div>
 
-                <div class="mb-4 d-flex justify-content-end">
-                  <button type="submit" class="btn btn-primary btn-error mb-3 botonerror">
+                <div class="mb-2 d-flex justify-content-end">
+                  <button
+                    type="submit"
+                    class="btn btn-primary btn-error my-1 botonerror"
+                  >
                     Registrar
                   </button>
                 </div>
-                </form>
+              </form>
+            </div>
+          </div>
+        </article>
+      </section>
+
+      <section>
+        <!-- Modal Login -->
+        <div
+          class="modal fade"
+          id="miModal"
+          tabindex="-1"
+          aria-labelledby="modalLoginLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <!-- Encabezado del modal -->
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLoginLabel">Iniciar sesión</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Cerrar"
+                ></button>
+              </div>
+
+              <!-- Cuerpo del modal -->
+              <div class="modal-body">
+                <div class="card shadow p-4 rounded-4">
+                  <form>
+                    <!-- Email -->
+                    <div class="mb-3">
+                      <label for="email" class="form-label"
+                        >Correo electrónico</label
+                      >
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="email"
+                        name="email"
+                        placeholder="correo@mail.com"
+                        maxlength="50"
+                        pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+                        title="Ingresa un correo válido. Ej: ejemplo@mail.com"
+                        autocomplete="email"
+                        required
+                      />
+                    </div>
+
+                    <!-- Contraseña -->
+                    <div class="mb-3">
+                      <label for="password" class="form-label"
+                        >Contraseña</label
+                      >
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="password"
+                        name="password"
+                        placeholder="Contraseña"
+                        minlength="8"
+                        maxlength="20"
+                        pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,}$"
+                        title="Debe tener al menos 8 caracteres, una letra, un número y un símbolo"
+                        autocomplete="current-password"
+                        required
+                      />
+                    </div>
+
+                    <!-- Link de recuperación -->
+                    <div class="mb-3 text-end">
+                      <a
+                        href="./pages/error404.html"
+                        class="text-decoration-none"
+                      >
+                        ¿Olvidaste tu contraseña?
+                      </a>
+                    </div>
+
+                    <!-- Botón de inicio de sesión -->
+                    <div class="d-grid">
+                      <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión
+                      </button>
+                      <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión con Google <i class="bi bi-google"></i>
+                      </button>
+                      <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión con Facebook
+                        <i class="bi bi-facebook"></i>
+                      </button>
+                    </div>
+                  </form>
                 </div>
-            </div>
-            </article>
-        </section>
-    </main>
-    <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
-        <div class="container">
-          <div class="row">
-            <div
-              class="col-12 col-md-6 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
-            >
-              <a
-                href="../index.html"
-                class="link-underline-opacity-0 d-flex align-items-center gap-2"
-              >
-                <img
-                  src="../img/EH1.png"
-                  alt="icono"
-                  class="img-fluid imgfoot ms-5"
-              /></a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 text-light">
-              <ul class="list-unstyled text-center">
-                <h4 class="text-dark">Información</h4>
-                <li class="mb-1">
-                  <a
-                    href="../pages/nosotros.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Acerca de nosotros</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="../pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Servicio al cliente</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="../pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Terminos y condiciones</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="../pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Politicas de privacidad</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 text-light">
-              <ul class="list-unstyled text-center fs-5">
-                <h4 class="text-dark">Redes Sociales</h4>
-                <li class="mb-1">
-                  <a
-                    href="../pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-facebook text-primary"></i> Facebook</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="../pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="../pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-instagram text-danger"></i> Instagram</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="../pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-linkedin text-primary-emphasis"></i>
-                    Linkedin</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 text-light">
-              <ul class="list-unstyled text-center">
-                <h4 class="text-dark">Metodos de Pago</h4>
-                <li class="mb-2 mt-2">
-                  <a
-                    href="../pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    ><img
-                      src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
-                      alt="icono"
-                      class="img-fluid me-2 iconoMC"
-                  /></a>
-                </li>
-                <li>
-                  <a
-                    href="../pages/error404.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    ><img
-                      src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
-                      alt="icono"
-                      class="img-fluid me-2 iconoVisa"
-                  /></a>
-                </li>
-              </ul>
+              </div>
+
+              <!-- Pie del modal-->
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Cancelar
+                </button>
+              </div>
             </div>
           </div>
         </div>
-        <p class="text-center mt-5">&copy;Todos los derechos reservados</p>
+      </section>
+    </main>
+    <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-12 col-md-6 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
+          >
+            <a
+              href="../index.html"
+              class="link-underline-opacity-0 d-flex align-items-center gap-2"
+            >
+              <img
+                src="../img/EH1.png"
+                alt="icono"
+                class="img-fluid imgfoot ms-5"
+            /></a>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 text-light">
+            <ul class="list-unstyled text-center">
+              <h4 class="text-dark">Información</h4>
+              <li class="mb-1">
+                <a
+                  href="../pages/nosotros.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Acerca de nosotros</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="../pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Servicio al cliente</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="../pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Terminos y condiciones</a
+                >
+              </li>
+              <li>
+                <a
+                  href="../pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Politicas de privacidad</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 text-light">
+            <ul class="list-unstyled text-center fs-5">
+              <h4 class="text-dark">Redes Sociales</h4>
+              <li class="mb-1">
+                <a
+                  href="../pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-facebook text-primary"></i> Facebook</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="../pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="../pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-instagram text-danger"></i> Instagram</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="../pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-linkedin text-primary-emphasis"></i>
+                  Linkedin</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 text-light">
+            <ul class="list-unstyled text-center">
+              <h4 class="text-dark">Metodos de Pago</h4>
+              <li class="mb-2 mt-2">
+                <a
+                  href="../pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  ><img
+                    src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
+                    alt="icono"
+                    class="img-fluid me-2 iconoMC"
+                /></a>
+              </li>
+              <li>
+                <a
+                  href="../pages/error404.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  ><img
+                    src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
+                    alt="icono"
+                    class="img-fluid me-2 iconoVisa"
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <p class="text-center mt-5">&copy;Todos los derechos reservados</p>
     </footer>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-        crossorigin="anonymous"
-      ></script>
-    </body>
-  </html>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
